# image_processor

./: CMakeLists.txt  README.md  bmp.cpp  bmp.h  errors.h  fabric.cpp  fabric.h  image.cpp  image.h  image_processor.cpp  image_wrapper.cpp  image_wrapper.h  main.cpp  parser.cpp  parser.h  pixel.cpp  pixel.h  readme.md  window.cpp  window.h
filters/: balance.cpp  balance.h  basefilter.h  crop.cpp  crop.h  edge.cpp  edge.h  filter_names.h  gray.cpp  gray.h  hshrink.cpp  hshrink.h  modifier.cpp  modifier.h  negative.cpp  negative.h  sharp.cpp  sharp.h  shrink.cpp  shrink.h  vshrink.cpp  vshrink.h
